Fix uneven grid wrapping

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -418,7 +418,11 @@
       li {
         @include grid-column(1/3);
         padding-bottom: $gutter;
-        min-height: 290px;
+        min-height: (5 * $gutter);
+      }
+
+      li:nth-child(3n+1) {
+        clear: left;
       }
     }
   }
